--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900">
+  <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-</body>
+    <script type="module" src="/index.tsx"></script> </body>
 </html>
